--- a/src/Components/KnowAbout/Testimonials/Testimonials.scss
+++ b/src/Components/KnowAbout/Testimonials/Testimonials.scss
@@ -2,7 +2,7 @@
     width: 20rem;
     height: 22rem;
     display: flex;
-    margin: 2rem;
+    margin: 2rem 0;
     border-radius: 4rem;
     align-items: center;
     flex-direction: column;
